# citra

./: CMakeLists.txt
src/: CMakeLists.txt
src/citra_sdl1/: CMakeLists.txt  citra.cpp  config.cpp  config.h  default_ini.h
src/citra_sdl1/emu_window/: emu_window_sdl1.cpp  emu_window_sdl1.h
src/core/frontend/: emu_window.h
src/input_common/: main.cpp
src/video_core/: CMakeLists.txt  renderer_base.cpp  video_core.cpp
src/video_core/renderer_sw/: renderer_sw.cpp  renderer_sw.h
